# rust-axum-demo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  posts.rs  prelude.rs
migration/src/: lib.rs  m20230915_153045_post.rs
src/: main.rs
