[package]
name = "rust-axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
tokio = { version = "1.29.0", features = ["full"] }
axum = "0.6.19"
anyhow = "1.0.71"
dotenvy = "0.15.7"
serde = "1.0.175"
serde_json = "1.0.102"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
